# nodejs_libtorch

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  cmake.js  index.js  node_script.cpp  node_script.h  package-lock.json  package.json  resnet24_se.pt  test.js  torch_script.cpp  torch_script.h
libtorch/: build-hash
libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2Targets.cmake
